RESOLVED FIXED34021
[WebFrame loadRequest:] does not null check the WebCore::Frame
https://bugs.webkit.org/show_bug.cgi?id=34021
Summary [WebFrame loadRequest:] does not null check the WebCore::Frame
Brady Eidson
Reported 2010-01-22 14:00:58 PST
[WebFrame loadRequest:] does not null check the WebCore::Frame A crash this can cause is covered in <rdar://problem/7416286> Many other methods in WebFrame null check the coreFrame, and this one should be no different.
Attachments
Fix (1.21 KB, patch)
2010-01-22 14:06 PST, Brady Eidson
adele: review+
beidson: commit-queue-
Brady Eidson
Comment 1 2010-01-22 14:06:49 PST
Brady Eidson
Comment 2 2010-01-22 15:03:53 PST
Note You need to log in before you can comment on or make changes to this bug.