[WebFrame loadRequest:] does not null check the WebCore::Frame <rdar://problem/7416286> and https://bugs.webkit.org/show_bug.cgi?id=34021

Reviewed by Adele Peterson.

* WebView/WebFrame.mm:
(-[WebFrame loadRequest:]): Null check the WebCore::Frame as it can disappear
  out of underneath a WebFrame.



Canonical link: https://commits.webkit.org/45120@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53721 268f45cc-cd09-0410-ab3c-d52691b4dbfc